examples/test/testpolicy17056.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17056
  namespace: namespace264
spec:
  podSelector:
    matchLabels:
      key41: value17
      key42: value3
      key43: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value14
      podSelector:
        matchLabels:
          key2: value36
